--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function onPlayerReady(event) {
 var done = false;
 function onPlayerStateChange(event) {
   if (event.data == YT.PlayerState.PLAYING && !done) {
-setTimeout(stopVideo, 6000);
+setTimeout(stopVideo, 60000000);
 done = true;
   }
 }
