--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ setTimeout(stopVideo, 00000000);
 done = true;
   }
 }
-function stopVideo() {
-  player.stopVideo();
-}
+//function stopVideo() {
+//  player.stopVideo();
+//}
  
 </script> 
 
