--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ function onYouTubeIframeAPIReady() {
   player = new YT.Player('player', {
 height: '390',
 width: '640',
-videoId: location.search.substring(1), autoplay: 1,
+videoId: location.search.substring(1),
 playerVars: {
-'playsinline': 1, 'autostart': 1,
+'playsinline': 1, 'autoplay': 1, 'autostart': 1,
 },
 events: {
 'onReady': onPlayerReady,
