--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ height: '390',
 width: '640',
 videoId: location.search.substring(1),
 playerVars: {
-'playsinline': 1, 'autoplay': 1, 'autostart': 1,
+'playsinline': 1, 'autostart': 1,
 },
 events: {
 'onReady': onPlayerReady,
